# bulletchess

./: .gitignore  :w  ;  BUGS.md  MANIFEST.in  Makefile  README.md  a.out  apply.s  bitboard.s  board.s  core  cprofile  datagen.py  date.s  debug  dict.s  fen.s  funcgen.py  gen.py  hash.s  init-linux  init-venv  move.s  oldMake  perft_res  perft_res2  perft_res_backup  pgn.c  pgn.s  piece.s  planning.md  playground.py  pyproject.toml  requirements.txt  rules.s  search.s  setup.py  test  test.c  (+7 more)
bulletchess/: .__init__.py.swp  __init__.py  __init__.pyi  bulletchess.c  demo.py  engine.py  main.py  main.pyi  moves.pickle  old.py  playground.py  pyproject.toml  setup.py  test.c  test.py  utils.py  utils.pyi
bulletchess.egg-info/: PKG-INFO  SOURCES.txt
ctest/: ctest.c
data/: perft_values.json
docs/: CNAME  conf.py  genindex.html  index.html  main.html  main.rst  objects.inv  performance.html  pgn.html  py-modindex.html  robots.txt  search.html  searchindex.js  sg_execution_times.html  sg_execution_times.rst  sitemap.xml  utils.html  walkthrough.html
examples/: .find_duplicates.py.swp  datagen.py  engine.py  notes.md  parse-write.json  parse-write.py  perft.py  pgn.py  piece_at_e1.py  statuses.py  zobrist.py
gfx/: doc.html
hashing/: find_best_hash.py
new_examples/: fen.py
old-tests/: apply.py  engine.py  hashing.py  move.py  parsing.py  patterns.py  piece.py  profile.py  pseudolegal.py  testing_utils.py
old_examples/: datagen.py  engine.py  perft.py
scripts/: compressed.html  debug_html.py  debug_perft.py  filter_status.py  gened.html  html_gen.py  test.py  (+12 more)
(+497 files in other folders)
