[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bulletchess"
version = "0.3.3"
authors = [
  { name="Jordan Zedeck", email="mail@jordanzedeck.com" },
]

description = "A high performance C Extension for chess"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://zedeckj.github.io/bulletchess/index.html"
Issues = "https://github.com/zedeckj/bulletchess/issues"


[tool.setuptools.packages.find]
include = ["bulletchess"]
